Project1/force-app/main/default/objects/Party__c/fields/Accepting_New_Members__c.field-meta.xml
<CustomField>
    <fullName>Accepting_New_Members__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if the party is accepting new members.</description>
    <label>Accepting New Members</label>
    <type>Checkbox</type>
</CustomField>