Project1/force-app/main/default/objects/Party__c/fields/Class_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Class_Requirements__c</fullName>
    <description>All selected classes are the required class to apply to join the party.</description>
    <label>Class Requirements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Class</valueSetName>
    </valueSet>
</CustomField>