Project1/force-app/main/default/objects/Party__c/fields/Max_Party_Size__c.field-meta.xml
<CustomField>
    <fullName>Max_Party_Size__c</fullName>
    <description>The maximum number of members allowed in this party. Set by the party owner.</description>
    <label>Max Party Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>