Project1/force-app/main/default/objects/Party__c/fields/Minimum_Level_Required__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Level_Required__c</fullName>
    <description>The minimum level required by the party leader for accepting new members.</description>
    <label>Minimum Level Required</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>