Project1/force-app/main/default/objects/Party__c/fields/Party_Size__c.field-meta.xml
<CustomField>
    <fullName>Party_Size__c</fullName>
    <description>The current number of members in the party.</description>
    <label>Party Size</label>
    <summaryForeignKey>Member_Assignment__c.Party__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>