Project1/force-app/main/default/objects/Party__c/validationRules/Max_Party_Size.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_Party_Size</fullName>
    <active>true</active>
    <description>Cannot have more members than the max party size.</description>
    <errorConditionFormula>Party_Size__c  &gt;  Max_Party_Size__c</errorConditionFormula>
    <errorMessage>The party is already full.</errorMessage>
</ValidationRule>